Fixed location of the input text box's X (on IE only) by adjusting padding.

--- a/styles/home.sass
+++ b/styles/home.sass
@@ -123,7 +123,7 @@ section.partners .join
   height: 50px
   line-height: 46px
   margin: 0
-  padding: 0 20px
+  padding: 0 0 0 20px
   width: 100%
 
 #form .fa-search
